# ggvtogpx

./: .gitignore  CMakeLists.txt  README.rst  defs.h  fatal.cc  format.cc  format.h  geodata.cc  geodata.h  ggv_bin.cc  ggv_bin.h  ggv_ovl.cc  ggv_ovl.h  ggv_xml.cc  ggv_xml.h  ggvtogpx.cc  gpx.cc  gpx.h
.github/workflows/: build.yml
testdata/: ggv_bin-sample-v2.gpx  ggv_bin-sample-v3.gpx  ggv_bin-sample-v4.gpx  ggv_ovl-sample-2.gpx  ggv_ovl-sample.gpx  ggv_xml-sample-1.gpx  ggv_xml-sample-2.gpx  ggv_xml-sample-3.gpx  ggv_xml-sample-4.gpx  ggv_xml-sample-5.gpx
